test/typecheck/pass/vector_access_dec.sail

val forall Nat 'n, Nat 'l, Type 'a, 'l >= 0. (vector<'n,'l,dec,'a>, [|'n - 'l + 1:'n|]) -> 'a effect pure vector_access_dec
val forall Nat 'n, Nat 'l, Type 'a, 'l >= 0. (vector<'n,'l,inc,'a>, [|'n:'n + 'l - 1|]) -> 'a effect pure vector_access_inc

default Order dec

val bit[4] -> unit effect pure test
    
function unit test v =
{
  z := vector_access(v,3);
  z := v[3]
}